# 3D-chess

./: CMakeLists.txt  README.md  camera.cpp  camera.h  controls.cpp  echiquier.cpp  echiquier.h  fpscontrols.cpp  main.cpp  mesh.cpp  mesh.h  navigationcontrols.cpp  object.cpp  object.h  renderer.h  texture.h  uvbuffer.cpp
Pieces/: cavalier.cpp  cavalier.h  cavalier.mtl  dame.cpp  dame.h  dame.mtl  fou.cpp  fou.h  fou.mtl  piece.cpp  piece.h  pion.cpp  pion.h  pion.mtl  roi.cpp  roi.h  roi.mtl  tour.cpp  tour.h  tour.mtl
shaders/: SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader
